# Gym-Assistant

./: .gitignore  .pre-commit-config.yaml  README.md  plan.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: backmerge.yml  backup_db.yml  ci.yml  dbt-build.yml  e2e-tests.yml  keep_alive.yml  pre-commit.yml  run-migrations.yml  test-auth.yml  test-unit.yml  wake-up.yml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/: login_success.html
backend/: email_sender.py  settings.py  test_email.py  urls.py  views.py
backend/authentication/: adapters.py  google_login_view.py  models.py  serializers.py  urls.py  urls_api.py  views.py
backend/authentication/migrations/: 0002_add_cascade_to_allauth_foreign_keys.py  0003_add_cascade_to_authtoken_foreign_key.py  0004_add_cascade_to_emailconfirmation.py  0005_add_update_cascade_to_auth.py  0006_add_update_cascade_to_socialaccount.py
backend/core/: models.py  serializers.py  urls_api.py  views.py  workout_validations.py
backend/core/analytics/: urls.py  views.py
backend/emails/: __init__.py  adapters.py  mailersend.py
core/: api_throttle.py  custom_fields.py  models.py  serializers.py  urls.py  urls_api.py  views.py
core/migrations/: 0001_initial.py  0002_alter_attachments_table_alter_calendar_table_and_more.py  0002_workouts_user.py  0003_assign_schema.py  0003_attachments_ta_updated_at_equipment_ta_updated_at_and_more.py  0004_exercise_muscle_bridge_muscle_role.py  0005_alter_exercise_muscle_bridge_muscle_role.py  0006_ignore_alembic_managed.py
db/: README.md  alembic.ini
db/alembic/: env.py
db/alembic/versions/: 001_create_schemas.py  002_auth_tables.py  003_core_tables.py  004_drop_auth_schema.py  005_create_seeds_schema.py  1f20500a6eac_.py  f6e75e980162_.py
db/core/: dimensions.py  fact_workouts.py
db/transformation/: README.md  dbt_project.yml  profiles.yml
db/transformation/macros/: create_index.sql  get_custom_schema.sql
db/transformation/models/: dim_attachments.sql  dim_equipment.sql  dim_exercises.sql  dim_muscles.sql  exercise_muscle_bridge.sql  schema.yml
db/transformation/seeds/: schema.yml  seed_attachments.csv  seed_equipment.csv  seed_exercise_muscle.csv  seed_exercises.csv  seed_muscles.csv
db/transformation/tests/: test_exercise_leaves_in_bridge.sql  test_exercise_muscle_relationship.sql  test_exercise_parents_notin_bridge.sql  test_fact_uses_dimension_leaves.sql  test_muscle_leaves_in_bridge.sql  (+2 more)
frontend/: homepage.html  index.html
frontend/css/: homepage.css  login.css
frontend/js/: homepage.js  login.js  utils.js
frontend/pages/: login.html
frontend/static/: style.css
frontend/templates/: homepage.html  login.html  login_success.html
infra/: github_resources.tf  providers.tf  render_resources.tf  secrets.tf  some.txt  variables.tf
infra/github/: resource.tf
infra/render/: resource.tf
tests/: README.md  conftest.py  constants.py  helpers.py  test_django_dbt.py
tests/e2e/: conftest.py  test_auth.py  test_dashboard.py  test_workout_input.py
tests/meta/: test_django_dbt.py
tests/ui/: auth.py  test_auth.py  test_workout_input.py  wake.py
tests/unit/: conftest.py  test_analytics.py  test_auth.py
utils/: generate_dates.sql  load  sync_db.py
(+87 files in other folders)
